force-app/main/default/objects/BMCServiceDesk__SLA_History__c/BMCServiceDesk__SLA_History__c.object-meta.xml
<CustomObject>
    <description>Stores the data that tracks the history of all actions that have been performed on agreements.</description>
    <label>Agreement History</label>
    <nameField>
        <label>Agreement History ID</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Agreement Histories</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>