force-app/main/default/objects/BMCServiceDesk__SLA_History__c/fields/BMCServiceDesk__Action__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__Action__c</fullName>
    <formula>BMCServiceDesk__FKAction__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Action~</label>
    <type>Text</type>
</CustomField>