force-app/main/default/objects/BMCServiceDesk__SLA_History__c/fields/BMCServiceDesk__Description__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__Description__c</fullName>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>