force-app/main/default/objects/BMCServiceDesk__SLA_History__c/fields/BMCServiceDesk__FKAction__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__FKAction__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Action</label>
    <referenceTo>BMCServiceDesk__Action__c</referenceTo>
    <relationshipLabel>SLA Histories</relationshipLabel>
    <relationshipName>SLA_Histories</relationshipName>
    <type>Lookup</type>
</CustomField>