force-app/main/default/objects/BMCServiceDesk__SLA_History__c/fields/BMCServiceDesk__FKSLA__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__FKSLA__c</fullName>
    <label>Agreement</label>
    <referenceTo>BMCServiceDesk__ServiceLevelAgreement__c</referenceTo>
    <relationshipLabel>SLA Histories</relationshipLabel>
    <relationshipName>SLA_Histories</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>